# trailed

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yaml  docs.yaml
dect/: __init__.py  dataframe.py  directions.py  ect.py  sklearn.py  torch_layer.py
dect/plugins/: __init__.py
dect/plugins/sklearn/: channels.py  fast.py  transformer.py
dect/plugins/torch/: __init__.py  autograd.py  config.py  functional.py  layers.py
dect/sampling/: directions.py
dect/tabular/: __init__.py  core.py  pandas.py  polars.py  transformer.py  utils.py
docs/source/: api.rst  benchmarks.rst  conf.py  configuration.rst  index.rst  integrations.rst  overview.rst  trailed.rst  user_guide.rst
docs/source/_static/: custom.css
docs/source/userGuides/: advanced.rst  best_practices.rst  installation.rst  intermediate.rst  programmatic.rst  quickstart.rst  testing.rst
src/: directions.rs  ect.rs  lib.rs  parallel.rs
tests/: benchmark.py  compare.py  compare_polars_ehr.py  conftest.py  test_dataframe.py  test_directions.py  test_ect.py  test_file_size.py  test_sklearn.py  test_sklearn_transformer.py  test_torch_layer.py
trailed/: __init__.py
trailed/plugins/: __init__.py
trailed/plugins/sklearn/: __init__.py  channels.py  fast.py  transformer.py
trailed/sampling/: __init__.py  directions.py
trailed/tabular/: core.py  pandas.py  polars.py  transformer.py  utils.py
