[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "trailed"
version = "0.1.0"
authors = [
    { name="Krv Labs", email="team@krv.ai" },
]
description = "TRAILED: Topological Regularization and Integrity Learning for EHR Data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
sklearn = [
    "scikit-learn>=1.0",
]
dataframe = [
    "pandas>=1.5",
    "polars>=0.20",
]
all = [
    "scikit-learn>=1.0",
    "pandas>=1.5",
    "polars>=0.20",
]

[dependency-groups]
tests = [
    "ruff>=0.15.7",
    "pandas>=1.5",
    "polars",
    "pytest",
    "pytest-cov",
    "scikit-learn>=1.0",
    "torch>=2.0",
    "dect",
]
docs = [
    "sphinx>=7.4,<9",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=0.9.2",
    "IPython>=8.18.1",
    "nbsphinx>=0.9.5",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "trailed_rust"
python-packages = ["trailed"]
exclude = [
    "tests/**",
    ".github/**",
    ".claude/**",
    ".cursor/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    ".venv/**",
    "target/**",
    ".coverage",
    "*.lock",
]


[tool.uv.sources]
dect = { git = "https://github.com/aidos-lab/DECT/" }
